<resources>
    <string name="app_name">BakingApp</string>
    <string name="dummy_recipe_name" translatable="false">Recipe Name</string>
    <string name="serving_label">Servings: </string>
    <string name="dummy_serving_number">8</string>
    <string name="dummy_single_recipe_detail">Ingredients</string>
    <string name="quantity_label">Quantity: </string>
    <string name="dummy_quantity">2.5</string>
    <string name="measure_label">Measure: </string>
    <string name="dummy_measure">CUP</string>
    <string name="ingredient_label">Ingredient: </string>
    <string name="dummy_ingredient">Nutella or other chocolate-hazelnut spread</string>
    <string name="dummy_description">2. Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed.</string>
    <string name="btn_previous_text">Previous</string>
    <string name="btn_next_text">Next</string>
    <string name="dummy_widget_recipe_name_text">Yellow Cake</string>
    <string name="widget_initial_text">Welcome</string>

</resources>
