<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/single_recipe_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorRecipeListBackground"
        android:layout_margin="@dimen/recipe_viewholder_margin">

        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/recipe_name_paddingTop"
            tools:text="@string/dummy_recipe_name"
            style="@style/RecipeNameTextStyle"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serving_label"
                style="@style/ServingTextStyle"/>

            <TextView
                android:id="@+id/tv_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/dummy_serving_number"
                style="@style/ServingTextStyle"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>